Scroll informacion (particulas)

--- a/css/color.css
+++ b/css/color.css
@@ -30,7 +30,7 @@ a.btn.dark_gray_bt:focus,
 .pagination>.active>span:hover,
 .icon_feature {
     /* background: #ff3f3f; */
-    background:#34495f;
+    background:#083358;
     /* background:#f60404; */
     background-size: 100% 100%;
     border: none;
