--- a/css/style.css
+++ b/css/style.css
@@ -467,19 +467,53 @@ header .right_bt .btn {
 
 /*==================================section-informacion========================================================*/
 
-
+body {
+	background:url(../images/back1.jpg), #000;
+	background-size: 100%;
+	background-attachment:fixed;
+}
+#particles-js {
+	width:100%;
+	height:100%;
+	position:fixed;
+	background: #00000073;
+}
+.informacion{
+	color: #f6f6f6;
+}
 .informacion h5{
+	position: relative;
 	padding: 5rem 2rem 5rem 2rem;
 	text-align: center;
 	font-size: 1.5rem;
-	border-top: 13px solid #e4434b;
+	border-top: 13px solid #fc3c3c;
+}
+.informacion img{
+	height: 30vw;
+	width: 100%;
 }
 .informacion p{
 	font-size: 1.2rem;
+	font-weight: bolder;
 }
 .informacion hr {
     margin-top: 1rem;
     margin-bottom: 1rem;
-	border-top: 6px solid #e4434b;
+	border-top: 6px solid #fc3c3c;
 }
+.objetivo{
+	color: #f6f6f6;
+	position: relative;
+	background-color: #083358;
+	margin-top: 4rem;
+
+}
+.objetivo h5{
+	font-size: 1.5rem;
+	font-weight: bolder;
+}
+.objetivo p{
+	font-size: 1.2rem;
+}
+
 
