--- a/css/style.css
+++ b/css/style.css
@@ -467,53 +467,82 @@ header .right_bt .btn {
 
 /*==================================section-informacion========================================================*/
 
-body {
-	background:url(../images/back1.jpg), #000;
-	background-size: 100%;
-	background-attachment:fixed;
+/* body {
+	background:url(../images/back2.jpg) center center;
+    background-size: 100vw;
+    background-attachment: fixed;
 }
 #particles-js {
 	width:100%;
 	height:100%;
 	position:fixed;
-	background: #00000073;
-}
-.informacion{
-	color: #f6f6f6;
-}
-.informacion h5{
+	background: #0000009c;
+} */
+.presentacion{
+	font-family: "Poppins", sans-serif;
+    text-rendering: optimizeLegibility;
+	color: #0a0a0a;
 	position: relative;
 	padding: 5rem 2rem 5rem 2rem;
+	/* background-color: #f6f6f6; */
+}
+.presentacion h5{
+	font-family: Raleway;
 	text-align: center;
-	font-size: 1.5rem;
-	border-top: 13px solid #fc3c3c;
+	line-height: 1.6;
+	font-size: 3em;
 }
-.informacion img{
-	height: 30vw;
-	width: 100%;
+.presentacion p{
+	/* font-family: "Poppins", sans-serif; */
+	text-align: center;
+	line-height: 1.6;
+	font-size: 1.4em;
 }
-.informacion p{
-	font-size: 1.2rem;
-	font-weight: bolder;
+.presentacion .item{
+	padding-top: 4rem;
 }
-.informacion hr {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-	border-top: 6px solid #fc3c3c;
+.presentacion .item p{
+	font-size: 1rem;
 }
 .objetivo{
-	color: #f6f6f6;
+	padding: 3rem;
+	color: #0a0a0a;
 	position: relative;
-	background-color: #083358;
-	margin-top: 4rem;
-
+	font-family: "Poppins", sans-serif;
+	line-height: 1.6;
+    text-rendering: optimizeLegibility;
+	/* background-color: #f6f6f6;; */
 }
 .objetivo h5{
-	font-size: 1.5rem;
+	font-size: 2em;
 	font-weight: bolder;
 }
-.objetivo p{
-	font-size: 1.2rem;
+.objetivo hr{
+	margin-top: 16px;
+    margin-bottom: 8px;
+    width: 9rem;
+    border: 0;
+    border-top: 2px solid #d8d0d0;
 }
-
-
+.objetivo p{
+	padding-top: 1rem;
+	font-family: "Poppins", sans-serif;
+	font-size: 1em;
+	line-height: 1.6;
+}
+.servicios{
+	background:url(../images/back2.jpg) center right no-repeat;
+	background-size: cover; 
+	background-attachment: fixed;
+	color: #fff;
+	font-family: "Poppins", sans-serif;
+}
+.servicios-back{
+	background:#00000063;
+	padding: 5rem 2rem 5rem 2rem;
+}
+.servicios h5{
+	font-family: Raleway;
+	font-size: 2em;
+	font-weight: bolder;
+}
