--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1509,6 +1509,26 @@
 		height: 50vh !important;
 	
 	}
+	/* Small only */
+	@media screen and (max-width: 39.9375em) {
+		.rev_slider_wrapper, .rev_slider, .tp-fullwidth-forcer, .rev_slider .tp-bgimg.defaultimg {
+			height: 90vw !important;
+		}
+		.servicios{
+			background-attachment: local;
+			height: 100%
+		}
+	}
+	/* Medium only */
+	@media screen and (min-width: 40em) and (max-width: 63.9375em) {
+		.rev_slider_wrapper, .rev_slider, .tp-fullwidth-forcer, .rev_slider .tp-bgimg.defaultimg {
+			height: 100vh !important;
+		}
+		.servicios{
+			background-attachment: local;
+			height: 100%
+		}
+	}
 	/* body {
 		background:url(../images/back2.jpg) center center no-repeat fixed;
 		background-size: 250% 100%; 
@@ -1537,6 +1557,34 @@
 	}
 	
 }
+/*Media*/
+@media screen and (min-width: 320px) and (max-width: 520px) {
+	#servicios-contenedor {
+		margin-top: 50px;
+	}
+
+	.servicios-contenido .content-column .content-box {
+		padding: 200px 20px 100px 20px;	
+	}
+	.servicios-contenido .content-column h4{
+		font-size: 4vw;
+	}
+}
+
+/*Media*/
+@media screen and (min-width: 521px) and (max-width: 950px) {
+	#servicios-contenedor{
+		margin-top: 50px;
+	}
+
+	.servicios-contenido .content-column .content-box {
+		padding: 200px 20px 100px 20px;	
+	}
+	.servicios-contenido .content-column h4{
+		font-size: 3.5vw;
+	}
+}
+/*=============END AUTOR==========================*/
 
 @media (max-width:574px) {
 	/**== header ==**/
