--- a/css/style.css
+++ b/css/style.css
@@ -604,4 +604,93 @@ header .right_bt .btn {
 	color: #000000;
 	max-width: 250px;	
 }
+/*-- home --*/
+.home_grids_w3,.grid_w3l {
+	padding:0;
+ }
+.gallery_grid {
+	margin: 2em 0 0;
+}
+.grid_w3l img {
+	width:100%;
+}
+.img1,.img2,.img3,.img4,.img5,.img6{
+	padding:0;
+	background-size: cover !important;
+}
+.img1 {
+	background: url(../images/back1.jpg) center;
+}
+ .img2 {
+	background: url(../images/back1.jpg) center;
+}
+.img3 {
+	background: url(../images/back.jpg) center;
+}
+.img4 {
+	background: url(../images/back.jpg) center; 
+}
+.img5 {
+	background: url(../images/back1.jpg) center;
+}
+.img6 {
+	background: url(../images/back1.jpg) center;
+}
+.img_text_w3ls {
+    padding: 9.15em 0;
+	transition: 0.5s all;
+	-webkit-transition: 0.5s all;
+	-moz-transition: 0.5s all;
+	-o-transition: 0.5s all;
+	-ms-transition: 0.5s all;
+	background: rgba(78, 54, 54, 0.85);
+}
+.img5 .img_text_w3ls,.img1 .img_text_w3ls{
+	height: 100%;
+	/* background:rgba(40, 141, 145, 0.69); */
+	background: rgba(66, 72, 72, 0.69);
+}
+.img2 .img_text_w3ls,.img3 .img_text_w3ls,.img6 .img_text_w3ls{
+	height: 100%;
+	background: rgba(0, 51, 102, 0.6);
+}
+.img4 .img_text_w3ls{
+	height: 100%;
+	/* background:rgba(51, 102, 153, 0.6) */
+	background: rgba(66, 72, 72, 0.69);
+}
+.img_text_w3ls h4 {
+	color: #fff;
+	font-size: 1.5em;
+	margin: 0;
+	font-weight: 700;
+	text-transform: capitalize;
+	letter-spacing: 2px;
+}
+.img_text_w3ls span {
+    width: 30%;
+    height: 1px;
+    background: rgba(255, 255, 255, 0.29);
+    display: inline-block;
+    margin: 1.5em 0 0.5em;
+	transition: 0.5s all;
+	-webkit-transition: 0.5s all;
+	-moz-transition: 0.5s all;
+	-o-transition: 0.5s all;
+	-ms-transition: 0.5s all;
+}
+.img-grid:hover .img_text_w3ls span {
+    width: 50%;
+}
+.img_text_w3ls li {
+	color: #fff;
+	font-size: .9em;
+	font-weight: 700;
+	margin: 0.8em;
+	letter-spacing: 1px;
+	text-transform: capitalize;
+}
+.img-grid:hover .img_text_w3ls {
+    background: rgba(43, 91, 162, 0.2);
+}
 
